Remove unused code